--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <div class="top-section">
-            <img src="/assets/hero-image.png" alt="">
+            <img class="ntf-mercia" src="/assets/hero-image.png" alt="">
             <h1 class="top-text">Social Media Service</h1>
             <p class="top-text">Because your business is my business</p>               
     </div>     
