--- a/index.html
+++ b/index.html
@@ -6,43 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,700&display=swap');
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     
 <header>  
         <div class="brand-logo">
-            <a href="#"> <img class="avatar" src="/assets/brand-logo-transparent-bg.png" alt=""> </a> 
+            <a href="#"> <img class="avatar" src="/assets/brand-logo-transparent-bg.png" alt="logo-with-link"> </a> 
         </div>
-        <div class="nav-menu">
+        <nav>
             <a href="#">About</a>
             <a href="#">Pricing & Services</a>
             <a href="#">Contact</a>
-        </div>
+        </nav>
 </header>
 
 
+
     <div class="top-section">
-            <img class="ntf-mercia" src="/assets/hero-image.png" alt="">
-            <h1 class="top-text">Social Media Service</h1>
-            <p class="top-text">Because your business is my business</p>               
+            <div class="top-left"><img class="ntf-mercia" src="/assets/3-removebg-preview.webp" alt=""></div>
+
+                <div class="top-right"><h1 class="top-text">Social Media Service</h1>
+                <p class="top-text motto">Because your business is my business</p>   
+             </div>              
     </div>     
 
     <div class="middle-section">
-        <p>Do people know you?</p>
-        <p>Here at Notify Mercia, we can help you connect with audiences. We prioritize your online presence. Because at the end of the day, your business is our business. Your success matters. </p>
-        <p>Your existence matters</p>
-        <ul>
-            <li>Boost your online presence.</li>
-            <li>Explore endless digital possibilities.</li>
-            <li>Level social media game.</li>
-            <li>Intensify your brand.</li>
-            <li>Elevatate opportunities.</li>
-            <li>Vibrate excitement.</li>
-            <li>Engage with your target audience.</li>
-        </ul>
+        <div class="mid-top">
+            <h1>Do people know you?</h1>
+            <p>Here at Notify Mercia, we can help you connect with audiences. We prioritize your online presence. Because at the end of the day, your business is our business. Your success matters. </p>
+        </div>
+        <div class="mid-bottom"> 
+            <h1>Your existence matters</h1>     
+            <ul>
+                <li><span>B</span>oost your online presence.</li>
+                <li><span>E</span>xplore endless digital possibilities.</li>
+                <li><span>L</span>evel social media game.</li>
+                <li><span>I</span>ntensify your brand.</li>
+                <li><span>E</span>levatate opportunities.</li>
+                <li><span>V</span>ibrate excitement.</li>
+                <li><span>E</span>ngage with your target audience.</li>
+            </ul>
+        </div>
     </div>
     
     <div class="my-services">
